peac_dev/force-app/main/default/objects/Pool_Asset__c/Pool_Asset__c.object-meta.xml
<CustomObject>
    <label>Pool Asset</label>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>Pool Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pool Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>