peac_dev/force-app/main/default/objects/Pool_Asset__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created this field to expose the related list view of the pool asset in contract.</description>
    <label>Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Pool Assets</relationshipLabel>
    <relationshipName>Contract_Pool_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>