peac_dev/force-app/main/default/objects/Pool_Asset__c/fields/Contract_Asset__c.field-meta.xml
<CustomField>
    <fullName>Contract_Asset__c</fullName>
    <label>Asset</label>
    <referenceTo>Contract_Asset__c</referenceTo>
    <relationshipLabel>Pool Assets</relationshipLabel>
    <relationshipName>Pool_Assets</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>