peac_dev/force-app/main/default/objects/Pool_Asset__c/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <description>Display contract status</description>
    <formula>TEXT(Contract__r.Status__c)</formula>
    <label>Contract Status</label>
    <type>Text</type>
</CustomField>