peac_dev/force-app/main/default/objects/Pool_Asset__c/fields/Pool__c.field-meta.xml
<CustomField>
    <fullName>Pool__c</fullName>
    <label>Pool</label>
    <referenceTo>Pool__c</referenceTo>
    <relationshipLabel>Pool Assets</relationshipLabel>
    <relationshipName>Pool_Assets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>