peac_dev/force-app/main/default/objects/Pool_Asset__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <description>Get the asset serial number from contract asset record</description>
    <formula>Contract_Asset__r.Serial_Number__c</formula>
    <label>Serial Number</label>
    <type>Text</type>
</CustomField>